--- a/pcrss.css
+++ b/pcrss.css
@@ -142,7 +142,7 @@ font-family: LXGW WenKai;
 min-height:400px;
 }
 .post{
-    content-visibility: auto;
+    //content-visibility: auto;
     
     position: relative;
     width: 380px;
